# quote-engine

./: .gitignore  Cargo.toml  README.md  package-lock.json
crates/quoter-engine/: .gitignore  Cargo.toml
crates/quoter-engine/src/: benchmark.rs  bindings.rs  config.rs  env_loader.rs  lib.rs  output.rs  types.rs
crates/quoter-engine/src/config/: validation.rs
crates/quoter-engine/src/data/: cache.rs  component_tracker.rs  history.rs  mod.rs
crates/quoter-engine/src/engine/: analytics.rs  graph.rs  mod.rs  pathfinder.rs  quoting.rs  simulation.rs
crates/quoter-engine/src/env_loader/: parser.rs  redaction.rs
crates/quoter-engine/src/utils/: gas_calculator.rs  mod.rs  token_list.rs
docs/: price-quoter-system-reference.md
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/alerts/components/: alerts.tsx
frontend/src/app/path-explorer/: page.tsx
frontend/src/app/path-explorer/components/: graph-visualization.tsx  index.ts  network-visualization.tsx  path-card.tsx  path-explorer.tsx  paths-sidebar.tsx  real-time-context.tsx  real-time-status.tsx  token-node.tsx
frontend/src/app/prices/: page.tsx
frontend/src/app/prices/components/: README.md  index.ts  price-list-refactored.tsx  price-list.tsx
frontend/src/app/prices/components/data/: mock-data.ts
frontend/src/app/prices/components/search/: search-bar.tsx
frontend/src/app/settings/: README.md  page.tsx
frontend/src/app/settings/components/: gas-configuration.tsx  index.ts  quoting-parameters.tsx  settings-header.tsx  settings.tsx  tracked-tokens.tsx
frontend/src/app/settings/hooks/: index.ts  use-settings.ts
frontend/src/app/token-network/: page.tsx
frontend/src/app/token-network/components/: network-graph-visualization.tsx  network-paths-sidebar.tsx  network-real-time-context.tsx  token-network.tsx
frontend/src/app/watchlist/: page.tsx
frontend/src/app/watchlist/components/: watchlist.tsx
frontend/src/components/: navigation.tsx  price-path-hover.tsx  price-path-modal.tsx  protocol-icon.tsx  token-network-graph.tsx
frontend/src/components/features/price-list/: index.tsx
frontend/src/components/ui/: hover-card.tsx  table.tsx
frontend/src/hooks/: index.ts  usePriceAnimation.ts  useRealTimeData.ts
frontend/src/types/: price-quoter.ts
(+4 files in other folders)
