[package]
name = "price-quoter"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Real-Time Price Quoter using Tycho"

[features]
default = []
cli = ["dep:clap", "dep:rustyline"]
api = ["dep:axum", "dep:hyper"]
delta_sssp = []
python = ["dep:pyo3", "dep:pyo3-asyncio"]

[dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
indexmap = "2.2"
petgraph = "0.6"
futures = "0.3"
async-stream = "0.3"
num-traits = "0.2"
hex = "0.4"
rust_decimal = { version = "1.32", features = ["maths", "serde"] }
lru = "0.12"
good_lp = "1.6.0"
itertools = "0.12"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
toml = "0.7"
num-bigint = "0.4.6"
rustc-hash = "1.1"
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", package = "tycho-simulation", tag = "0.258.0", default-features = false, features = ["evm"] }
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37", "rust_decimal"], optional = true }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"], optional = true }
log = "0.4"
# Add tokio-stream
tokio-stream = "0.1"


# Optional deps for features
clap = { version = "4.4", features = ["derive"], optional = true }
axum = { version = "0.7", features = ["json"], optional = true }
hyper = { version = "1.4", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
rustyline = { version = "13", optional = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
slotmap = "1.0"
# Use the alloy-primitives version from tycho-simulation to avoid duplicate crate versions
# alloy-primitives is already a transitive dependency; no explicit version required here

# Align with tycho-simulation's alloy-primitives version to ensure type compatibility
alloy-primitives = { version = "1", default-features = false }
csv = "1.1"
env_logger = "0.11"

[lib]
name = "price_quoter"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test_price_quoter"
path = "src/bin/test_price_quoter.rs"
